Updated all the examples given in index.html to be with x and y, isntead of i and j

--- a/examples/01_beginner/gol_dots.html
+++ b/examples/01_beginner/gol_dots.html
@@ -1,6 +1,6 @@
 <!-- 
 
-    EXAMPLE FILE 01: Game of Life
+    EXAMPLE FILE 01: Game of Life (advanced display)
     This file shows the most easy use-case for the Cacatoo library, and 
     illustrates it's core functionality with Conways Game of Life. 
 
