--- a/examples/01_beginner/interacting_grids.html
+++ b/examples/01_beginner/interacting_grids.html
@@ -1,6 +1,6 @@
 <!-- 
 
-    EXAMPLE FILE 04: Interacting grids
+    EXAMPLE FILE: Interacting grids
     Here, two models are defined, one following the rules of Game of Life (i.e. example 01),
     and one following the rules of majority voting (take the state that most of your neighbours)
     have. However, the "alive" pixels in game of life, also vote! This is a good example to 
