Updated all the examples given in index.html to be with x and y, isntead of i and j

--- a/examples/index.html
+++ b/examples/index.html
@@ -35,7 +35,7 @@
         <video width="150" height="150" muted autoplay loop> <source src="images/interact.webm" type="video/mp4" /> </video> </div></a>
     
     <h1>Exploring biology</h1>
-    <a href="04_even_more_examples/chemotaxis.html"><div class="example_card" >Chemotaxis
+    <a href="02_advanced/chemotaxis.html"><div class="example_card" >Chemotaxis
         <video width="150" height="150" muted autoplay loop> <source src="images/chemo.webm" type="video/mp4" /> </video> </div></a>
     
     <a href="04_even_more_examples/predator_prey.html"><div class="example_card" >Predator-prey
