--- a/examples/01_beginner/langtons_ant.html
+++ b/examples/01_beginner/langtons_ant.html
@@ -25,14 +25,14 @@
 /*-----------------------Start user-defined code ---------------------*/
 
 let sim; // Declare a variable named "sim" globally, so that we can access our cacatoo-simulation from wherever we need. 
-
+var speed =200;
 function cacatoo(){
     let config = {
         title: "Langton's ant",                       // The name of your cacatoo-simulation
         description: "",        // And a description if you wish
         maxtime: 1000000,                            // How many time steps the model continues to run
-        ncol: 100,                                    // Number of columns (width of your grid)
-        nrow: 100,		                             // Number of rows (height of your grid)        
+        ncol: 400,                                    // Number of columns (width of your grid)
+        nrow: 200,		                             // Number of rows (height of your grid)        
         wrap: [true, true],                          // Wrapped boundary conditions? [COLS, ROWS]   
         scale: 2,				                     // Scale of the grid (nxn pixels per grid point)
         bgcolour: 'white',
@@ -108,7 +108,7 @@ function cacatoo(){
         applies the next-state function shown above to each grid point. All cells are updated at the same time, rather than in turn (for this, use the function "asynchonous")
     */
     sim.ant.update = function () {
-        for(let i=0;i<100;i++) this.moveAnt()
+        for(let i=0;i<speed;i++) this.moveAnt()
     }
 
     /*
@@ -117,6 +117,7 @@ function cacatoo(){
     sim.addButton("pause/continue", function () { sim.toggle_play() })
     sim.addButton("step", function () { sim.step(); sim.display() })  
     sim.addMovieButton(sim.ant, "Langtons ant")
+    sim.addSlider("speed",1,10000,1)
     // sim.addCustomSlider("Sleeping time (ms)",function (new_value) { sim.sleep = new_value },0,1000,1,0) // addCustomSlider(function, minimal, maximal, step-size, default, label)
     sim.start()
 
